# aoc

./: Day10.hs  Day10_2.hs  Day12.hs  Day14.hs  Day17.hs  Day18.hs  Day23.hs  Day8Tardis.hs  aoc.cabal
2022/: Day10.hs  Day10_2.hs  Day11.hs  Day12.hs  Day12Delete.hs  Day13.hs  Day14.hs  Day17.hs  Day18.hs  Day23.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day8Tardis.hs  Day9.hs  Main.hs  aoc.cabal
2023/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.js  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Main.hs  aoc.cabal
2024/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Main  Main.hs  aoc.cabal
