cabal-version:      2.4
name:               aoc
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Adam Barber
maintainer:         me@me.com

-- A copyright notice.
-- copyright:
-- category:

executable aoc2022
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
    other-modules:
        Day5,
        Day6,
        Day7,
        Day8,
        Day8Tardis,
        Day9,
        Day10,
        Day10_2,
        Day11,
        Day12,
        Day13,
        Day14,
        Day17,
        Day18,
        Day23
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ==4.20.0.0,
                      vector,
                      QuickCheck,
                      containers,
                      transformers,
                      mtl,
                      lens,
                      extra,
                      monad-loops,
                      tardis,
                      linear,
                      split,
                      MemoTrie,
                      monad-memo,
                      parallel
    hs-source-dirs:
    default-language: Haskell2010
