cabal-version:      2.4
name:               aoc
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Adam Barber
maintainer:         me@me.com

-- A copyright notice.
-- copyright:
-- category:

executable aoc2024
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
    other-modules:
        Day1,
        Day2,
        Day3,
        Day4,
        Day5

    build-depends:    base ^>=4.20.0.0,
                      extra ^>= 1.8,
                      containers ^>= 0.7,
                      mtl ^>= 2.3.1

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:
    default-language: Haskell2010
